--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,12 +1,12 @@
 server {
      listen 8080 default_server;
-     root /var/www/html;
+     root /var/www/html/Public;
      index index.html index.php;
 
      charset utf-8;
 
      location / {
-      try_files $uri $uri/ /index.php?$query_string;
+         try_files $uri $uri/ /index.php;
      }
 
      location = /favicon.ico { access_log off; log_not_found off; }
