--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,20 @@
     "require": {
         "prewk/xml-string-streamer": "^1.2",
         "twig/twig": "^3.0",
-        "symfony/dotenv": "^5.4"
+        "symfony/dotenv": "^5.4",
+        "ext-dom": "*",
+        "ext-gd": "*",
+        "ext-iconv": "*",
+        "ext-libxml": "*",
+        "ext-mbstring": "*",
+        "ext-SimpleXML": "*",
+        "ext-xml": "*",
+        "ext-xmlreader": "*",
+        "ext-xmlwriter": "*",
+        "ext-zip": "*",
+        "ext-zlib": "*",
+        "psr/simple-cache": "^1.0",
+        "phpoffice/phpspreadsheet": "*"
     },
     "autoload": {
         "psr-4": {
