--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "ext-zip": "*",
     "ext-zlib": "*",
     "psr/simple-cache": "^1.0",
-    "phpoffice/phpspreadsheet": "*"
+    "phpoffice/phpspreadsheet": "*",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
