--- a/application/environment/.env
+++ b/application/environment/.env
@@ -1,4 +1,4 @@
-DB_NAME=mydb
-DB_HOST=mysql
-DB_USER=myuser
-DB_PASSWORD=password
+DB_NAME=registroaiutbf07_1
+DB_HOST=localhost
+DB_USER=registroaiutbf07
+DB_PASSWORD=nZP9qbOG_8x6M_DO
