--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "ext-zlib": "*",
     "psr/simple-cache": "^1.0",
     "phpoffice/phpspreadsheet": "*",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "spatie/crawler": "^7.1",
+    "fabpot/goutte": "^4.0"
   },
   "autoload": {
     "psr-4": {
